welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:30: error: not found: value setPost
  growFlowers(); droite(); avance(5); gauche() ; avance(6); Fleur(Color.blue); avance(); gauche(); avance(2); droite(); growFlowers(); setPost(9,14)} 
                                                                                                                                       ^