welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
grosPot1(); droite(); avance(4); gauche(); grosPot2()

def growFlowers() {
  faireLigne(Color.red,Color.cyan);  
  while (!estDosMur()) {recule()}; 
  droite(); avance(4); gauche(); 
  faireLigne(Color.pink, Color.green); 
  while (!estDosMur()) {recule()}; 
  faireLigne2(); setPos(1,6)}


def faireCarre(){baisseBrosse(); leveBrosse()}

def Fleur(c: Color) {
  setCouleurBrosse(c: Color); baisseBrosse(); avance(2); recule(); gauche(); avance(); recule(2); avance(); droite(); setCouleurBrosse(Color.yellow); leveBrosse()
}

def faireLigne(c3: Color, c2: Color) {
  Fleur(c3: Color); avance(3); Fleur(c2: Color)
}

def faireLigne2() {
  while (!estDosMur()) {recule()}; gauche(); avance(2); droite(); Fleur(Color.orange)
}

def grosPot1() {
  growFlowers();gauche(); avance(2); droite(); avance(6); Fleur(Color.blue); avance(); gauche(); avance(2); droite(); growFlowers()}

def grosPot2() {
  growFlowers(); droite(); avance(5); gauche() ; avance(6); Fleur(Color.blue); avance(); gauche(); avance(2); droite(); growFlowers(); setPost(9,14)}